[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniteai"
version = "0.3.0"
description = "AI, Inside your Editor."
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Josh Freckleton"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
requires-python = ">=3.7"

dependencies = [
  "pygls",
  "Thespian",
  "PyYAML",
  "requests",
]

[project.optional-dependencies]
local_llm = [
  "accelerate",
  "bitsandbytes",
  "einops",
  "fastapi",
  "scipy",
  { git = "https://github.com/huggingface/transformers.git", rev = "0afa5071bd84e44301750fdc594e33db102cf374" },
  "uvicorn",
  "sentencepiece",
]
openai = ["openai"]
transcription = [
  "PyAudio",
  "SpeechRecognition",
  "openai-whisper",
  "soundfile",
]
speech_to_text = [
  "TTS",
  "sounddevice",
]
document_chat = [
  "GitPython",
  "nbformat",
  "youtube-transcript-api",
  "InstructorEmbedding",
  "sentence-transformers",
  "pypdf",
  "beautifulsoup4",
  "pandas"
]
all = [
  "accelerate",
  "bitsandbytes",
  "einops",
  "fastapi",
  "scipy",
  "transformers",
  "uvicorn",
  "sentencepiece",

  "openai",

  "PyAudio",
  "SpeechRecognition",
  "openai-whisper",
  "soundfile",

  "GitPython",
  "nbformat",
  "youtube-transcript-api",
  "InstructorEmbedding",
  "sentence-transformers",
  "pypdf",
  "beautifulsoup4",
  "pandas"
]


[tool.hatch.build.targets.sdist]
include = [
  "/uniteai",
]

[tool.hatch.build.targets.wheel.force-include]
".uniteai.yml.example" = ".uniteai.yml.example"

[project.scripts]
uniteai_lsp = "uniteai.lsp_server:main"
uniteai_llm = "uniteai.llm_server:main"

[project.urls]
"Homepage" = "https://github.com/freckletonj/uniteai"
"Bug Tracker" = "https://github.com/freckletonj/uniteai/issues"

[tool.pip]
extra-index-url = "..."
